deploy/k8s/relay-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-relay-ssh
  namespace: rootenv-infra

spec:
  stripPrefix:
    prefixes:
      - /relay/ssh
