deploy/k8s/41-relay-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: relay-ssh-ingress
  namespace: rootenv-infra
  annotations:
    spec.ingressClassName: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: rootenv-infra-strip-prefix-relay-ssh@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /relay/ssh
        pathType: Prefix
        backend:
          service:
            name: relay-ssh-svc
            port:
              number: 8080
status:
  loadBalancer: {}
